[package]
name = "void-sdk-rust"
version = "1.0.1"
edition = "2021"
description = "Void SDK for building WebAssembly plugins in Rust"
authors = ["Soham Pramanik"]
license = "ISC"
keywords = ["webassembly", "wasm", "plugin", "sdk", "void-runtime"]
categories = ["wasm", "development-tools"]
repository = "https://github.com/shoya-129/void"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
